<resources>
    <string name="app_name" translatable="false">Tarombo</string>
    <string name="tagline">Create your own family tree</string>
    <string name="delete">Delete</string>
    <string name="sure_delete">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="change_date">Change date</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="cant_understand_uri">Could not understand the received URI.</string>
    <string name="version_name">Version %s</string>
    <string name="make_default">Main submitter</string>
    <string name="citations">Citations</string>
    <string name="sources_number">Number of sources</string>
    <string name="extension">Extension</string>
    <string name="new_family_of">New family of %s</string>
    <string name="existing_family">Already existing family</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="revert">Undo changes</string>
    <string name="trees">Trees</string>
    <string name="diagram">Diagram</string>
    <string name="diagram_of">Diagram of</string>
    <string name="no_persons">No persons</string>
    <string name="parents">Parents</string>
    <string name="media">Media</string>
    <string name="sources">Sources</string>
    <string name="notes">Notes</string>
    <string name="families">Families</string>
    <string name="repositories">Repositories</string>
    <string name="submitters">Submitters</string>
    <string name="new_tree">New tree</string>
    <string name="download_shared_tree">Download the shared tree</string>
    <string name="empty_tree">Start an empty tree</string>
    <string name="download_example">Download an example</string>
    <string name="import_a_gedcom_file">Import a GEDCOM file</string>
    <string name="import_backup">Recover a ZIP-file backup</string>
    <string name="modify_later">Later you can edit it.</string>
    <string name="name_of_tree">Title of tree</string>
    <string name="create">Create</string>
    <string name="tree_created">New tree created.</string>
    <string name="complex_tree_advanced_tools">This tree looks quite complex.\nShow advanced tools?</string>
    <string name="tree_imported_ok">Tree imported.</string>
    <string name="warning">Warning</string>
    <string name="old_backup_overwrite">This is an old backup type. All existing trees will be overwritten!\nProceed?</string>
    <string name="backup_invalid">This backup is invalid.</string>
    <string name="invalid_gedcom">Invalid GEDCOM.</string>
    <string name="tree">Tree</string>
    <string name="simpsons_tree">The Simpsons</string>
    <string name="family_gem_example">Tarombo example</string>
    <string name="a_new_tree">A new family tree</string>
    <string name="you_can_download">You can now download the tree shared with you.</string>
    <string name="download">Download</string>
    <string name="tap_add_tree">Tap to add a family tree.</string>
    <string name="persons">Persons</string>
    <string name="generation">Generation</string>
    <string name="generations">Generations</string>
    <string name="no_useful_data">Can\'t get useful data.</string>
    <string name="make_backup">Save backup as ZIP file</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="not_memory_tree">Not enough memory for this tree.</string>
    <string name="tree_info">Info</string>
    <string name="rename">Rename</string>
    <string name="find_errors">Error(s) found</string>
    <string name="find_person">Find person</string>
    <string name="share_tree">Share</string>
    <string name="compare">Compare</string>
    <string name="export_gedcom">Export GEDCOM</string>
    <string name="gedcom_exported_ok">GEDCOM exported.</string>
    <string name="zip_exported_ok">ZIP exported.</string>
    <string name="no_results">No results.</string>
    <string name="really_delete_tree">Are you sure to delete this tree?</string>
    <string name="all_ok">All OK.</string>
    <string name="errors_found">%d errors found.</string>
    <string name="correct">Correct</string>
    <string name="settings">Settings</string>
    <string name="auto_save">Auto save</string>
    <string name="load_tree_startup">Load last opened tree at startup</string>
    <string name="show_advanced_functions">Show advanced tools</string>
    <string name="about">About</string>
    <string name="item_exists_but_file">The tree entry is in the index, but is missing its related file:</string>
    <string name="root">Root</string>
    <string name="shares">Shares</string>
    <string name="refresh">Refresh</string>
    <string name="header">Header</string>
    <string name="create_header">Create header</string>
    <string name="update_header">Update header</string>
    <string name="file">File</string>
    <string name="characrter_set">Charset</string>
    <string name="version">Version</string>
    <string name="language">Language</string>
    <string name="copyright">Copyright</string>
    <string name="software">Software</string>
    <string name="corporation">Corporation</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="fax">Fax</string>
    <string name="date">Date</string>
    <string name="submitter">Submitter</string>
    <string name="submission">Submission</string>
    <string name="gedcom" translatable="false">GEDCOM</string>
    <string name="form">Form</string>
    <string name="destination">Destination</string>
    <string name="time">Time</string>
    <string name="media_folders">Media folders</string>
    <string name="media_searched_list">Media files are searched inside these folders:</string>
    <string name="app_storage">App storage</string>
    <string name="add_device_folder">Add a folder from this device.</string>
    <string name="share_sensitive">Sharing sensitive data</string>
    <string name="aware_upload_server">Please be aware this uploads the whole tree to a server online.</string>
    <string name="remind_later">Remind me later</string>
    <string name="please_title">Please write a title.</string>
    <string name="please_name">Please write a name.</string>
    <string name="link">Link</string>
    <string name="ideally_recipient">Ideally the recipient of the share.</string>
    <string name="changes_submitter">Submitter of changes</string>
    <string name="usually_your_name">Usually your name and surname.</string>
    <string name="allow_developer_access">Allow the app developer to access the shared tree</string>
    <string name="correctly_uploaded">Tree uploaded.</string>
    <string name="sharing_tree">Sharing a family tree</string>
    <string name="click_this_link">Click this link to see my family tree: %s</string>
    <string name="share_with">Share with</string>
    <string name="sharing_completed">Share completed.</string>
    <string name="tree_with_news">Tree with updates</string>
    <string name="tree_without_news">Tree without updates</string>
    <string name="tree_news_imported">The old tree above can receive %d updates from the imported tree:</string>
    <string name="sent_by">Sent by %s</string>
    <string name="shared_medias">Shared media</string>
    <string name="view_updates">Review singly</string>
    <string name="accept_all">Accept all</string>
    <string name="delete_imported_tree">Delete imported tree</string>
    <string name="one_update_choice">One update to make a choice for</string>
    <string name="many_updates_choice">%d updates to make a choice for</string>
    <string name="updates_replace_add">Replace existing items when importing updates, or add new ones?</string>
    <string name="import_news">Import update</string>
    <string name="person">Person</string>
    <string name="add">Add</string>
    <string name="replace">Replace</string>
    <string name="ignore">Skip</string>
    <string name="confirm_news">Confirm updates</string>
    <string name="accepted_news">You accepted %1$d updates:\n\t%2$d additions\n\t%3$d replacements\n\t%4$d deletions</string>
    <string name="confirm">Confirm</string>
    <string name="all_imported_delete">All updates have been imported.\nDelete the imported tree?</string>
    <string name="birthdays">Birthdays</string>
    <string name="birthday_notified_midday">The birthday of each person will be notified at midday.</string>
    <string name="turns_years_old">%1$s turns %2$d years old today.</string>
    <string name="new_person">Add the first person.</string>
    <string name="card">Profile</string>
    <string name="family_as_child">Family (as child)</string>
    <string name="family_as_spouse">Family (as spouse)</string>
    <string name="family_as">Family (as %s)</string>
    <string name="new_relative">Link new person</string>
    <string name="link_person">Link existing person</string>
    <string name="modify">Edit</string>
    <string name="unlink">Unlink</string>
    <string name="long_press_menu">Long-press to display the menu.\nTap to open the profile.</string>
    <string name="export_pdf">Export PDF</string>
    <string name="export_jpeg">Export JPEG</string>
    <string name="share_diagram">Share diagram</string>
    <string name="export_diagram">Export diagram</string>
    <string name="generate_chart">Generate Chart</string>
    <string name="chart_type">Chart Type</string>
    <string name="chart_exported_ok">Chart exported successfully</string>
    <string name="person_not_found">Person not found</string>
    <string name="choose_format">Choose format</string>
    <string name="pdf">PDF</string>
    <string name="jpeg">JPEG</string>
    <string name="pdf_exported_ok">PDF exported.</string>
    <string name="jpeg_exported_ok">JPEG exported.</string>
    <string name="text_exported_ok">Text exported.</string>
    <string name="diagram_settings">Diagram settings</string>
    <string name="generations_display_diagram">Set amount of generations to display in the diagram:</string>
    <string name="ancestors">Ancestors</string>
    <string name="uncles_great_uncles">Uncles and great-uncles</string>
    <string name="partners">Partners</string>
    <string name="descendants">Descendants</string>
    <string name="siblings_nephews">Siblings and nephews</string>
    <string name="uncles_cousins">Uncles and cousins</string>
    <string name="order_by">Sort by</string>
    <string name="id">ID</string>
    <string name="surname">Surname</string>
    <string name="year">Year</string>
    <string name="age">Age</string>
    <string name="number_relatives">Number of relatives</string>
    <string name="really_delete_person">Delete this person?</string>
    <string name="person_deleted">Person deleted.</string>
    <string name="events">Facts</string>
    <string name="relatives">Relatives</string>
    <string name="make_root">Set as root</string>
    <string name="this_is_root">%s is the main person of tree.</string>
    <string name="new_media">New media</string>
    <string name="new_shared_media">New shared media</string>
    <string name="link_shared_media">Link shared media</string>
    <string name="name">Name</string>
    <string name="yes">Yes</string>
    <string name="sex">Sex</string>
    <string name="event">Event</string>
    <string name="birth">Birth</string>
    <string name="baptism">Baptism</string>
    <string name="parent">Parent</string>
    <string name="sibling">Sibling</string>
    <string name="partner">Partner</string>
    <string name="child">Child</string>
    <string name="login">Log in</string>
    <string name="recover_trees">Recover trees</string>
    <string name="url_sub_repo">Sub-tree URL</string>
    <string name="root_family_relation">Relation to the root of the sub tree</string>
    <string name="kinship_terms">Kinship terms</string>
</resources>