<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="16dp">

	<!-- Kinship Terms Selector -->
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/kinship_terms"
		android:layout_marginTop="15dp"
		android:textStyle="bold" />

	<Spinner
		android:id="@+id/opzioni_kinship_spinner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="10dp" />

	<Switch
		android:id="@+id/opzioni_salva"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:text="@string/auto_save"/>

	<Switch
		android:id="@+id/opzioni_carica"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:text="@string/load_tree_startup"/>

	<Switch
		android:id="@+id/opzioni_esperto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:text="@string/show_advanced_functions"/>

	<TextView
		android:visibility="gone"
		android:id="@+id/recover_trees"
		android:text="@string/recover_trees"
		android:layout_marginTop="30dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TextView
		android:id="@+id/opzioni_lapide"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/about"
		android:layout_marginTop="30dp"/>

	<TextView
		android:id="@+id/login_logout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:layout_marginTop="30dp"/>

</LinearLayout>